// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxFormTextArea expect to render without error 1`] = `
<DocumentFragment>
  <textarea
    additionalprop="Prop1"
    aria-invalid="false"
    class="pf-c-form-control"
    input="[object Object]"
  />
</DocumentFragment>
`;

exports[`ReduxFormTextInput expect to render with defaultValue 1`] = `
<DocumentFragment>
  <input
    additionalprop="Prop1"
    aria-invalid="false"
    class="pf-c-form-control"
    data-ouia-component-id="OUIA-Generated-TextInputBase-2"
    data-ouia-component-type="PF4/TextInput"
    data-ouia-safe="true"
    input="[object Object]"
    type="text"
    value="Default Value"
  />
</DocumentFragment>
`;

exports[`ReduxFormTextInput expect to render without error 1`] = `
<DocumentFragment>
  <input
    additionalprop="Prop1"
    aria-invalid="false"
    class="pf-c-form-control"
    data-ouia-component-id="OUIA-Generated-TextInputBase-1"
    data-ouia-component-type="PF4/TextInput"
    data-ouia-safe="true"
    input="[object Object]"
    type="text"
    value="Value"
  />
</DocumentFragment>
`;
